--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   ],
   "dependencies": {
     "@uniswap/sdk-core": "^4.2.0",
+    "@uniswap/v2-sdk": "^4.3.0",
     "@uniswap/v3-sdk": "^3.11.0",
+    "axios": "^1.6.8",
     "ethers": "^5.7.2",
     "jsbi": "^4.3.0",
     "node-cron": "^3.0.3"
