--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "@uniswap/sdk-core": "^4.2.0",
+    "@uniswap/smart-order-router": "^3.26.1",
     "@uniswap/v2-sdk": "^4.3.0",
     "@uniswap/v3-sdk": "^3.11.0",
     "axios": "^1.6.8",
