--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@uniswap/router-sdk": "^1.9.0",
     "@uniswap/sdk-core": "^4.2.0",
     "@uniswap/smart-order-router": "^3.26.1",
+    "@uniswap/universal-router-sdk": "^1.9.0",
     "@uniswap/v2-sdk": "^4.3.0",
     "@uniswap/v3-sdk": "^3.11.0",
     "axios": "^1.6.8",
-    "ethers": "^5.7.2",
-    "jsbi": "^4.3.0",
+    "jsbi": "3.2.5",
+    "moment": "^2.30.1",
     "node-cron": "^3.0.3"
   },
   "nodemonConfig": {
