--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@uniswap/universal-router-sdk": "^1.9.0",
     "@uniswap/v2-sdk": "^4.3.0",
     "@uniswap/v3-sdk": "^3.11.0",
+    "abi-decoder": "^2.4.0",
     "axios": "^1.6.8",
     "jsbi": "3.2.5",
     "moment": "^2.30.1",
