--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@uniswap/v3-sdk": "^3.11.0",
     "abi-decoder": "^2.4.0",
     "axios": "^1.6.8",
+    "express": "^4.19.2",
     "jsbi": "3.2.5",
     "moment": "^2.30.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "telegraf": "^4.16.3"
   },
   "nodemonConfig": {
     "watch": [
