--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.12.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.6",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
