--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.6",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
@@ -44,7 +45,9 @@
     "abi-decoder": "^2.4.0",
     "axios": "^1.6.8",
     "express": "^4.19.2",
+    "firebase-admin": "^12.0.0",
     "jsbi": "3.2.5",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
     "telegraf": "^4.16.3"
