--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "jsbi": "3.2.5",
+    "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
