--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "ethers-new": "npm:ethers@6.11.1"
   },
   "nodemonConfig": {
     "watch": [
