--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.6",
+    "@types/numeral": "^2.0.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
@@ -44,6 +45,7 @@
     "@uniswap/v3-sdk": "^3.11.0",
     "abi-decoder": "^2.4.0",
     "axios": "^1.6.8",
+    "ethers-new": "npm:ethers@6.11.1",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "jsbi": "3.2.5",
@@ -51,8 +53,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-cron": "^3.0.3",
-    "telegraf": "^4.16.3",
-    "ethers-new": "npm:ethers@6.11.1"
+    "numeral": "^2.0.6",
+    "telegraf": "^4.16.3"
   },
   "nodemonConfig": {
     "watch": [
