--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.6",
@@ -45,6 +46,7 @@
     "@uniswap/v3-sdk": "^3.11.0",
     "abi-decoder": "^2.4.0",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "ethers-new": "npm:ethers@6.11.1",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
