--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@uniswap/v2-sdk": "^4.3.0",
     "@uniswap/v3-sdk": "^3.11.0",
     "abi-decoder": "^2.4.0",
+    "alchemy-sdk": "^3.2.1",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
     "ethers-new": "npm:ethers@6.11.1",
